Jeg har lagt ut mitt Fusion360 and Inkscape project i mitt nettsida.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -53,6 +53,10 @@ main{
 			   0px 0px 10px black;
 	text-align:center;
 }
+.project1 p{
+	width:100%;
+	
+}
 h2{
 	text-align:center;
 	font-size:3vw;
